# coverage-playground

./: Cargo.toml  README.md  gen_cov.py
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/cli/: mod.rs
src/coverage/: all.rs  block.rs  edge.rs  mod.rs  path.rs  per_function.rs  raw_path.rs
src/fuzzer/: error.rs  mod.rs  parallel.rs
